--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing page</title>
+    <title>Royal Danphe</title>
     <link rel="stylesheet" href="output.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
                         <a href="#" class="flex items-center py-2 px-2 text-gray-700">
                             <img src="daphe.png" class="h-20 w-32">
                             
-                            <span class="font-bold text-xl">Royaldanphe</span>
+                            <span class="font-bold text-xl">Royal Danphe</span>
                         </a>
                     </div>
     
