--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                         <a href="#" class="flex items-center py-2 px-2 text-gray-700">
                             <img src="daphe.png" class="h-20 w-32">
                             
-                            <span class="font-bold text-xl">Royaldanphe</span>
+                            <span class="font-bold text-xl">Royal Danphe</span>
                         </a>
                     </div>
     
