--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         
         <div class="row lg:pl-32 lg:pr-32 mt-10">
             <div class="col-6 col-md-2 mb-3">
-                <h5 class="font-bold">RDOSC</h5>
+                <h5 class="font-bold">Navigation</h5>
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About us</a></li>
