--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
                     <img class="h-[200px] w-[400px]" src="sweat.jpg">
-                    <h1 class="font-bold text-xl">Hoddie</h1>
+                    <h1 class="font-bold text-xl">Windcheater</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-star"></i>
