--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="wind.jpg">
+                    <img class="h-[200px] w-[400px]" src="windcheater.jpg">
                     <h1 class="font-bold text-xl">Hoodie</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="hoddi.jpg">
+                    <img class="h-[200px] w-[400px]" src="hoodie.jpg">
                     <h1 class="font-bold text-xl">Sweatshirt</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="sweat.jpg">
+                    <img class="h-[200px] w-[400px]" src="sweatshirt.jpg">
                     <h1 class="font-bold text-xl">Windcheater</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
