--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="px-4">
             <div class="flex flex-col lg:flex-row lg:flex gap-4 mt-10  lg:pl-32 lg:pr-32 ">
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px] " src="jog.jpg">
+                    <img class="h-[200px] w-[400px] " src="images/jog.jpg">
                     <h1 class="font-bold text-xl">Joggers</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -98,7 +98,7 @@
     
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="windcheater.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/hoodie.jpg">
                     <h1 class="font-bold text-xl">Hoodie</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="hoodie.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/sweatshirt.jpg">
                     <h1 class="font-bold text-xl">Sweatshirt</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="sweatshirt.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/windcheater.jpg">
                     <h1 class="font-bold text-xl">Windcheater</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
