--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
         <div class="px-4 mt-10 shadow-lg bg-slate-200">
             <div class="flex flex-col lg:flex-row lg:flex gap-4 mt-10  lg:pl-32 lg:pr-32 ">
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px] " src="jog.jpg">
+                    <img class="h-[200px] w-[400px] " src="images/jog.jpg">
                     <h1 class="font-bold text-xl">Joggers</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -86,7 +86,7 @@
     
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="hoddi.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/windcheater.jpg">
                     <h1 class="font-bold text-xl">Windcheater</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="sweat.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/hoodie.jpg">
                     <h1 class="font-bold text-xl">Hoddie</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col items-center justify-center gap-3 shadow-xl p-3">
-                    <img class="h-[200px] w-[400px]" src="wind.jpg">
+                    <img class="h-[200px] w-[400px]" src="images/sweatshirt.jpg">
                     <h1 class="font-bold text-xl">Sweatshirt</h1>
                     <div class="flex flex-row">
                         <i class="fa-solid fa-star"></i>
